--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0"
   }
 }
