--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.9",
     "@aws-sdk/client-s3": "^3.282.0",
+    "@bu-sail/cargo-middleware": "^0.1.0-alpha.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
