chore: trigger action on pull request

--- a/.github/workflow/client.yml
+++ b/.github/workflow/client.yml
@@ -6,6 +6,11 @@ on:
       - "**"
     braches:
       - main
+  pull_request:
+    paths:
+      - "**"
+    braches:
+      - main
 
 jobs:
   build:
