--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -26,3 +26,14 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build & Push Docker Build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: hicsail/nist-frontend:test
