--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -37,3 +37,9 @@ jobs:
           context: .
           push: true
           tags: hicsail/nist-frontend:test
+      - name: Push to Staging
+        uses: fjogeleit/http-request-action@v1
+        with:
+          method: "POST"
+          url: ${{ secrets.PORTAINER_WEBHOOK }}
+          preventFailureOnNoResponse: true
