--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -31,6 +31,8 @@ jobs:
           VITE_AWS_SECRET: ${{ secrets.VITE_AWS_SECRET }}
           VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
           VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
+          VITE_CARGO_ENDPOINT: ${{ secrets.VITE_CARGO_ENDPOINT }}
+          VITE_S3_ENDPOINT: ${{ secrets.VITE_S3_ENDPOINT }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
