--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -26,6 +26,13 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_AWS_KEY: ${{ secrets.VITE_AWS_KEY }}
+          VITE_AWS_SECRET: ${{ secrets.VITE_AWS_SECRET }}
+          VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
+          VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
+          VITE_CARGO_ENDPOINT: ${{ secrets.VITE_CARGO_ENDPOINT }}
+          VITE_S3_ENDPOINT: ${{ secrets.VITE_S3_ENDPOINT }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
