--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -15,13 +15,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      VITE_AWS_KEY: ${{ secrets.VITE_AWS_KEY }}
-      VITE_AWS_SECRET: ${{ secrets.VITE_AWS_SECRET }}
-      VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
-      VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
-      VITE_CARGO_ENDPOINT: ${{ secrets.VITE_CARGO_ENDPOINT }}
-      VITE_S3_ENDPOINT: ${{ secrets.VITE_S3_ENDPOINT }}
     steps:
       - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
@@ -33,13 +26,6 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-        env:
-          VITE_AWS_KEY: ${{ secrets.VITE_AWS_KEY }}
-          VITE_AWS_SECRET: ${{ secrets.VITE_AWS_SECRET }}
-          VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
-          VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
-          VITE_CARGO_ENDPOINT: ${{ secrets.VITE_CARGO_ENDPOINT }}
-          VITE_S3_ENDPOINT: ${{ secrets.VITE_S3_ENDPOINT }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -51,6 +37,13 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: hicsail/nist-frontend:test
+          build-args: |
+            VITE_AWS_KEY=${{ secrets.VITE_AWS_KEY }}
+            VITE_AWS_SECRET=${{ secrets.VITE_AWS_SECRET }}
+            VITE_AUTH_URL=${{ secrets.VITE_AUTH_URL }}
+            VITE_PROJECT_ID=${{ secrets.VITE_PROJECT_ID }}
+            VITE_CARGO_ENDPOINT=${{ secrets.VITE_CARGO_ENDPOINT }}
+            VITE_S3_ENDPOINT=${{ secrets.VITE_S3_ENDPOINT }}
       - name: Push to Staging
         uses: fjogeleit/http-request-action@v1
         if: github.ref == 'refs/heads/main'
