--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "introspection": "graphql-codegen --config graphql-codegen.yml"
+    "introspection": "graphql-codegen --config graphql-codegen.yml",
+    "prettier": "prettier -l \"src/**/*.ts(x)\"",
+    "prettier:fix": "prettier -wl \"src/**/*.ts(x)\""
   },
   "dependencies": {
     "@apollo/client": "^3.7.9",
@@ -35,6 +37,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
