Add format checking to GitHub actions

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Check formatting
+        run: npm run prettier
+
       - name: Build
         run: npm run build
 
