--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-aws-s3": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "seqparse": "^0.2.1",
+    "seqviz": "^3.8.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
