--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -22,16 +22,20 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Install dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build & Push Docker Build
+
+      - name: Build & Push Docker Test Build
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -45,10 +49,35 @@ jobs:
             VITE_CARGO_ENDPOINT=${{ secrets.VITE_CARGO_ENDPOINT }}
             VITE_S3_ENDPOINT=${{ secrets.VITE_S3_ENDPOINT }}
             VITE_AUTHSERVICE_URL=${{ secrets.VITE_AUTHSERVICE_URL }}
+
+      - name: Build & Push Docker Production Build
+        uses: docker/build-push-action@v4
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: hicsail/nist-frontend:production
+          build-args: |
+            VITE_AWS_KEY=${{ secrets.VITE_AWS_KEY_PROD }}
+            VITE_AWS_SECRET=${{ secrets.VITE_AWS_SECRET_PROD }}
+            VITE_AUTH_URL=${{ secrets.VITE_AUTH_URL_PROD }}
+            VITE_PROJECT_ID=${{ secrets.VITE_PROJECT_ID_PROD }}
+            VITE_CARGO_ENDPOINT=${{ secrets.VITE_CARGO_ENDPOINT_PROD }}
+            VITE_S3_ENDPOINT=${{ secrets.VITE_S3_ENDPOINT_PROD }}
+            VITE_AUTHSERVICE_URL=${{ secrets.VITE_AUTHSERVICE_URL_PROD }}
+
       - name: Push to Staging
         uses: fjogeleit/http-request-action@v1
         if: github.ref == 'refs/heads/main'
         with:
           method: "POST"
           url: ${{ secrets.PORTAINER_WEBHOOK }}
+          preventFailureOnNoResponse: true
+
+      - name: Push to Production
+        uses: fjogeleit/http-request-action@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          method: "POST"
+          url: ${{ secrets.PORTAINER_WEBHOOK_PRODUCTION }}
           preventFailureOnNoResponse: true
