--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@aws-sdk/client-s3": "^3.282.0",
     "@aws-sdk/signature-v4-crt": "^3.347.0",
     "@bu-sail/cargo-middleware": "^0.1.0-alpha.3",
-    "@bu-sail/s3-viewer": "file:../../microservices/s3-viewer",
+    "@bu-sail/s3-viewer": "^0.0.1-alpha.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
